// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en gifexpertApp debe de mostrar una lista de categorias  1`] = `
<Fragment>
  <h2>
    soy un componente funcionando
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Naruto"
      key="Naruto"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en gifexpertApp testeando gifExpertApp  1`] = `
<Fragment>
  <h2>
    soy un componente funcionando
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
